--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "d3": "^4.5.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4"
   },
