--- a/package.json
+++ b/package.json
@@ -2,13 +2,6 @@
   "name": "monte-carlo-tree-search",
   "private": true,
   "version": "1.0.0",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "start": "http-server -p 8000 -o -c-1",
-    "test": "mocha test --colors test/**/*Test.js"
-  },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "d3": "^4.5.0",
@@ -17,7 +10,26 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "@types/d3": "^4.5.0",
+    "@types/jquery": "^2.0.40",
+    "@types/lodash": "^4.14.52",
+    "@types/mocha": "^2.2.39",
+    "@types/node": "^7.0.5",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
     "http-server": "^0.9.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "source-map-loader": "^0.1.6",
+    "style-loader": "^0.13.1",
+    "typescript": "^2.2.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
+  },
+  "scripts": {
+    "build": "rm -rf dist && tsc -p . && webpack",
+    "start": "webpack-dev-server --bail --colors --progress --port 8000",
+    "dist": "http-server dist -p 8000 -c-1 -o",
+    "test": "tsc -p . && mocha --colors"
   }
 }
