--- a/package.json
+++ b/package.json
@@ -17,19 +17,21 @@
     "@types/node": "^7.0.5",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
     "http-server": "^0.9.0",
     "mocha": "^3.2.0",
     "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
+    "ts-node": "^2.1.0",
     "typescript": "^2.2.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
-    "build": "rm -rf dist && tsc -p . && webpack",
+    "build": "rm -rf dist && tsc -p . && webpack --bail --colors --progress",
     "start": "webpack-dev-server --bail --colors --progress --port 8000",
     "dist": "http-server dist -p 8000 -c-1 -o",
-    "test": "tsc -p . && mocha --colors"
+    "test": "tsc -p . && mocha --colors test/**/*Test.js"
   }
 }
