--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "build": "rm -rf dist && tsc -p . && webpack --bail --colors --progress",
     "start": "tsc -p . && webpack-dev-server --bail --colors --progress --port 8000",
-    "dist": "http-server dist -p 8000 -c-1 -o",
+    "dist": "http-server -p 8000 -c-1 -o",
     "test": "tsc -p . && mocha --colors test/**/*Test.js"
   }
 }
