--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "private": true,
   "version": "1.0.0",
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "d3": "^4.5.0",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.1.1",
-    "lodash": "^4.17.4"
+    "bootstrap": "3.3.7",
+    "d3": "4.5.0",
+    "font-awesome": "4.7.0",
+    "jquery": "3.1.1",
+    "lodash": "4.17.11"
   },
   "devDependencies": {
-    "@types/d3": "^4.5.0",
-    "@types/jquery": "^2.0.40",
-    "@types/lodash": "^4.14.52",
-    "@types/mocha": "^2.2.39",
-    "@types/node": "^7.0.5",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.10.0",
-    "http-server": "^0.9.0",
-    "mocha": "^3.2.0",
-    "source-map-loader": "^0.1.6",
-    "style-loader": "^0.13.1",
-    "ts-node": "^2.1.0",
-    "typescript": "^2.2.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "@types/d3": "4.5.0",
+    "@types/jquery": "2.0.40",
+    "@types/lodash": "4.14.52",
+    "@types/mocha": "2.2.39",
+    "@types/node": "7.0.5",
+    "copy-webpack-plugin": "4.0.1",
+    "css-loader": "0.26.1",
+    "extract-text-webpack-plugin": "2.0.0",
+    "file-loader": "0.10.0",
+    "http-server": "0.11.1",
+    "mocha": "3.2.0",
+    "source-map-loader": "0.1.6",
+    "style-loader": "0.13.1",
+    "ts-node": "2.1.0",
+    "typescript": "2.2.1",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.4.1"
   },
   "scripts": {
     "build": "rm -rf dist && tsc -p . && webpack --bail --colors --progress",
